--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-
 .DS_Store
-
-ALDemo.xcodeproj/project.xcworkspace/xcuserdata/xielei.xcuserdatad/UserInterfaceState.xcuserstate
-
-ALDemo.xcodeproj/project.xcworkspace/xcuserdata/xielei.xcuserdatad/UserInterfaceState.xcuserstate
+ALDemo.xcodeproj/project.xcworkspace/xcuserdata/
+ALDemo.xcodeproj/xcuserdata/
+Carthage/
